# Nexus--AI-NPC-backend

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  NEXUS_README.md  PROGRESS.md  README.md  alembic.ini  config.py  docker-compose.yml  env.example  pyproject.toml  pytest.ini  requirements.txt
api/: config.py  dependencies.py  main.py
api/data/npcs/: marcus_webb.json
api/models/: __init__.py  base.py  event.py  game.py  npc.py  player.py  session.py
api/routers/: __init__.py  analytics.py  auth.py  games.py  npcs.py  realtime.py  sessions.py  webhooks.py
api/schemas/: __init__.py  auth.py  common.py  npc.py  session.py
api/scripts/: evaluate_live_llm.py
api/services/: __init__.py  auth_service.py  emotion_service.py  memory_service.py  npc_service.py  realtime_service.py  session_service.py
api/services/llm/: __init__.py  anthropic_provider.py  base.py  factory.py  groq_provider.py  openai_provider.py
dashboard/: index.html  package-lock.json  package.json  tailwind.config.js
dashboard/src/: App.tsx  index.css
dashboard/src/api/: nexus.ts
dashboard/src/components/: BehaviourBadge.tsx  EmotionBar.tsx  LiveIndicator.tsx  MemoryLog.tsx  SessionCard.tsx
dashboard/src/hooks/: useNexusWS.ts  useSession.ts
dashboard/src/pages/: APIKeys.tsx  (+4 more)
migrations/: env.py
migrations/versions/: 001_initial_schema.py
sdk/javascript/: README.md  package-lock.json  package.json  tsconfig.json
sdk/python/: README.md  pyproject.toml
sdk/python/nexus_py/: __init__.py  auth.py  client.py  exceptions.py  models.py  npcs.py  realtime.py  sessions.py
sdk/python/tests/: conftest.py  test_auth_sdk.py  test_npcs_sdk.py  test_sessions_sdk.py
tests/: conftest.py  test_auth.py  test_npc.py  test_realtime.py  test_sessions.py
(+8 files in other folders)
