[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nexus-py"
version = "0.1.0"
description = "Python SDK for the Nexus AI-native game backend"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Nexus" }
]
keywords = ["nexus", "game-backend", "npc", "ai", "websocket", "sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Framework :: AsyncIO",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30.0",
]

[project.urls]
Homepage = "https://github.com/nexus/nexus"
Documentation = "https://github.com/nexus/nexus/sdk/python/README.md"

[tool.hatch.build.targets.wheel]
packages = ["nexus_py"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
